--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>Document</title>
+    <title>Cecilia Elejanagoitia </title>
     <link rel="stylesheet" href="proyecto.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -20,8 +20,9 @@
                 <il class="nav-menu"> <a href="#conocimientos"> CONOCIMIENTOS </a></il>
                 <il class="nav-menu"><a href="#proyectos"> PROYECTOS</a></il>
                 <il class="nav-menu">
-                    <div class="button"><a href="#contacto"> CONTACTO</a></div>
+                <a href="#contacto" class="boton-contacto"> CONTACTO</a></div>
             </nav>
+            <button class="abrir-menu"> <a href="#"> Menú</a><i class="fa-solid fa-bars"></i></button>
         </div>
     </header>
 <!-- ******************************Fin del Header****************************** -->
@@ -93,7 +94,7 @@
     </section>
 <!-- ******************************Fin de la Seccion Proyectos******************************
 ******************************Comienzo Seccion Contactos****************************** -->
-    <section class="contenedor-formulario">
+    <section class="contenedor-formulario" id="contacto">
         <div class="mi-formulario">
             <div class="formulario">
                 <h1 class="h1-4">Contactame</h1>
@@ -129,7 +130,7 @@
                     <textarea name="message" id="mensaje" cols="60" rows="10" placeholder="Escriba un mensaje aquí"></textarea>
 
                     <div class="btn">
-                        <button>Enviar</button>
+                        <button class="button">Enviar</button>
                     </div>
                 </form>
 
